# archai

./: .gitignore  README.md  pyproject.toml  requirements.txt
archai/: __init__.py  __main__.py
archai/ai/: __init__.py  anthropic_provider.py  base.py  claude_cli_provider.py  gemini_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py  router.py
archai/architects/: __init__.py  base.py  event_driven.py  hexagonal.py  microservices.py  monolithic.py  serverless.py
archai/cli/: __init__.py  app.py  commands.py  renderer.py
archai/config/: __init__.py  prompts.py  settings.py
archai/outputs/calculator/: main.py
archai/outputs/claude-opus/calc-monolethic/: main.py
archai/outputs/claude-opus/calc-monolethic-microservices/: README.md  docker-compose.yml  nginx.conf  requirements.txt
archai/outputs/claude-opus/calc-monolethic-microservices/api-gateway/: app.py
archai/outputs/claude-opus/calc-monolethic-microservices/calculator-service/: app.py  models.py
archai/outputs/claude-opus/calc-monolethic-microservices/client/: cli_client.py
archai/outputs/claude-opus/calc-monolethic-microservices/history-service/: app.py  models.py  repository.py
archai/outputs/claude-opus/calc-monolethic-microservices/k8s/: calculator-service.yaml  gateway-service.yaml  (+1 more)
archai/templates/microservices/: docker-compose.yml.j2
archai/templates/monolithic/: README.md.j2
archai/templates/serverless/: serverless.yml.j2
archai/transformers/: __init__.py  analyzer.py  base.py  converter.py
archai/utils/: __init__.py  code_parser.py  file_ops.py  logger.py
outputs/hello/: README.md  main.py
outputs/hello-microservices/: README.md  docker-compose.yml
outputs/hello-microservices/api_gateway/: app.py
outputs/hello-microservices/hello_service/: app.py
(+8 files in other folders)
